--- a/src/main/resources/templates/owners/ownersList.html
+++ b/src/main/resources/templates/owners/ownersList.html
@@ -5,7 +5,7 @@
   <body>
 
     <h2>Owners</h2>
-
+    <label>search keyword is <span th:utext="${keyword}"></span></label>
     <table id="owners" class="table table-striped">
         <thead>
         <tr>
